// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно формирует разметку для страницы комтранса 1`] = `
<div
  className="BreadcrumbsPanel"
>
  <BreadCrumbs
    items={
      Array [
        Object {
          "content": "Продажа коммерческого транспорта",
          "link": "link/index/?",
        },
        Object {
          "content": "Отзывы",
          "link": "link/reviews-index/?",
        },
        Object {
          "content": "Отзывы о коммерческом транспорте - автобусы",
          "link": "link/reviews-listing/?parent_category=trucks&category=bus",
        },
      ]
    }
  />
</div>
`;

exports[`правильно формирует разметку для страницы легковых с 1 поколением 1`] = `
<div
  className="BreadcrumbsPanel"
>
  <BreadCrumbs
    items={
      Array [
        Object {
          "content": "Продажа автомобилей",
          "link": "link/index/?",
        },
        Object {
          "content": "Отзывы",
          "link": "link/reviews-index/?",
        },
        Object {
          "content": "Отзывы об автомобилях -  Ford",
          "link": "link/reviews-listing/?parent_category=cars&category=&mark=FORD",
        },
        Object {
          "content": "Отзывы об автомобилях -  Ford EcoSport",
          "link": "link/reviews-listing/?parent_category=cars&category=&mark=FORD&model=ECOSPORT",
        },
        Object {
          "content": "I",
          "link": "link/reviews-listing/?parent_category=cars&category=&mark=FORD&model=ECOSPORT&super_gen=20104320",
        },
      ]
    }
  />
</div>
`;

exports[`правильно формирует разметку для страницы легковых с 1+ поколениями 1`] = `
<div
  className="BreadcrumbsPanel"
>
  <BreadCrumbs
    items={
      Array [
        Object {
          "content": "Продажа автомобилей",
          "link": "link/index/?",
        },
        Object {
          "content": "Отзывы",
          "link": "link/reviews-index/?",
        },
        Object {
          "content": "Отзывы об автомобилях -  Ford",
          "link": "link/reviews-listing/?parent_category=cars&category=&mark=FORD",
        },
        Object {
          "content": "Отзывы об автомобилях -  Ford EcoSport",
          "link": "link/reviews-listing/?parent_category=cars&category=&mark=FORD&model=ECOSPORT",
        },
      ]
    }
  />
</div>
`;

exports[`правильно формирует разметку для страницы мото 1`] = `
<div
  className="BreadcrumbsPanel"
>
  <BreadCrumbs
    items={
      Array [
        Object {
          "content": "Продажа мототехники",
          "link": "link/index/?",
        },
        Object {
          "content": "Отзывы",
          "link": "link/reviews-index/?",
        },
        Object {
          "content": "Отзывы о мототехнике - мотовездеходы BRP",
          "link": "link/reviews-listing/?parent_category=moto&category=atv&mark=BRP",
        },
        Object {
          "content": "Отзывы о мототехнике - мотовездеходы BRP Can-Am Commander 1000",
          "link": "link/reviews-listing/?parent_category=moto&category=atv&mark=BRP&model=COMMANDER_1000",
        },
      ]
    }
  />
</div>
`;
